// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RobotEventsSource > should get correct event data using importFromRobotEvents 1`] = `
{
  "awardsOptions": [
    {
      "name": "Teamwork Champion Award",
    },
    {
      "name": "Teamwork 2nd Place Award",
    },
    {
      "name": "Teamwork 3rd Place Award",
    },
    {
      "name": "Robot Skills Champion",
    },
    {
      "name": "Robot Skills 2nd Place",
    },
    {
      "name": "Robot Skills 3rd Place",
    },
    {
      "name": "Excellence Award - Middle School",
    },
    {
      "name": "Excellence Award - Elementary School",
    },
    {
      "name": "Design Award",
    },
    {
      "name": "Innovate Award",
    },
    {
      "name": "Create Award",
    },
    {
      "name": "Think Award",
    },
    {
      "name": "Amaze Award",
    },
    {
      "name": "Build Award",
    },
    {
      "name": "Judges Award",
    },
    {
      "name": "Inspire Award",
    },
    {
      "name": "Sportsmanship Award",
    },
    {
      "name": "Energy Award",
    },
  ],
  "divisionInfos": [
    {
      "id": 1,
      "name": "Division 1",
    },
  ],
  "eventGradeLevel": "Blended",
  "eventName": "2025 JSTEA Hong Kong Open Robotics Tournament - VIQRC",
  "program": "VIQRC",
  "robotEventsEventId": 58288,
  "robotEventsSku": "RE-VIQRC-24-8288",
  "teamInfos": [
    {
      "number": "2706A",
    },
    {
      "number": "2706C",
    },
    {
      "number": "2706E",
    },
    {
      "number": "2706F",
    },
    {
      "number": "3415A",
    },
    {
      "number": "3415B",
    },
    {
      "number": "3708A",
    },
    {
      "number": "3708B",
    },
    {
      "number": "3708C",
    },
    {
      "number": "3708D",
    },
    {
      "number": "3708E",
    },
    {
      "number": "4206A",
    },
    {
      "number": "4815A",
    },
    {
      "number": "4815B",
    },
    {
      "number": "5354A",
    },
    {
      "number": "5354B",
    },
    {
      "number": "6626A",
    },
    {
      "number": "10863A",
    },
    {
      "number": "10863B",
    },
    {
      "number": "10863D",
    },
    {
      "number": "13205A",
    },
    {
      "number": "13205B",
    },
    {
      "number": "13520A",
    },
    {
      "number": "13520B",
    },
    {
      "number": "16481A",
    },
    {
      "number": "16481B",
    },
    {
      "number": "20230A",
    },
    {
      "number": "20230B",
    },
    {
      "number": "20230C",
    },
    {
      "number": "20230D",
    },
    {
      "number": "21119A",
    },
    {
      "number": "21119B",
    },
    {
      "number": "21169E",
    },
    {
      "number": "26054A",
    },
    {
      "number": "26054B",
    },
    {
      "number": "70909C",
    },
    {
      "number": "70909S",
    },
  ],
}
`;

exports[`RobotEventsSource > should get the correct event data with 1 division 1`] = `
[
  102496,
  104028,
  175243,
  175244,
  129461,
  129462,
  144269,
  144279,
  151768,
  154595,
  162534,
  182306,
  103059,
  105118,
  136715,
  136716,
  160887,
  62270,
  79721,
  181990,
  126531,
  126532,
  175104,
  175105,
  154977,
  162994,
  167515,
  167516,
  178753,
  178754,
  172145,
  172146,
  180856,
  181591,
  181592,
  163783,
  163901,
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division 2`] = `
[
  {
    "divisionId": 1,
    "rank": 1,
    "teamNumber": "6626A",
  },
  {
    "divisionId": 1,
    "rank": 2,
    "teamNumber": "4815A",
  },
  {
    "divisionId": 1,
    "rank": 3,
    "teamNumber": "4815B",
  },
  {
    "divisionId": 1,
    "rank": 4,
    "teamNumber": "10863A",
  },
  {
    "divisionId": 1,
    "rank": 5,
    "teamNumber": "2706E",
  },
  {
    "divisionId": 1,
    "rank": 6,
    "teamNumber": "21119B",
  },
  {
    "divisionId": 1,
    "rank": 7,
    "teamNumber": "3415A",
  },
  {
    "divisionId": 1,
    "rank": 8,
    "teamNumber": "2706C",
  },
  {
    "divisionId": 1,
    "rank": 9,
    "teamNumber": "13205A",
  },
  {
    "divisionId": 1,
    "rank": 10,
    "teamNumber": "3415B",
  },
  {
    "divisionId": 1,
    "rank": 11,
    "teamNumber": "13205B",
  },
  {
    "divisionId": 1,
    "rank": 12,
    "teamNumber": "21169E",
  },
  {
    "divisionId": 1,
    "rank": 13,
    "teamNumber": "26054B",
  },
  {
    "divisionId": 1,
    "rank": 14,
    "teamNumber": "10863B",
  },
  {
    "divisionId": 1,
    "rank": 15,
    "teamNumber": "5354A",
  },
  {
    "divisionId": 1,
    "rank": 16,
    "teamNumber": "20230D",
  },
  {
    "divisionId": 1,
    "rank": 17,
    "teamNumber": "5354B",
  },
  {
    "divisionId": 1,
    "rank": 18,
    "teamNumber": "2706A",
  },
  {
    "divisionId": 1,
    "rank": 19,
    "teamNumber": "26054A",
  },
  {
    "divisionId": 1,
    "rank": 20,
    "teamNumber": "21119A",
  },
  {
    "divisionId": 1,
    "rank": 21,
    "teamNumber": "2706F",
  },
  {
    "divisionId": 1,
    "rank": 22,
    "teamNumber": "4206A",
  },
  {
    "divisionId": 1,
    "rank": 23,
    "teamNumber": "20230A",
  },
  {
    "divisionId": 1,
    "rank": 24,
    "teamNumber": "70909S",
  },
  {
    "divisionId": 1,
    "rank": 25,
    "teamNumber": "13520B",
  },
  {
    "divisionId": 1,
    "rank": 26,
    "teamNumber": "20230C",
  },
  {
    "divisionId": 1,
    "rank": 27,
    "teamNumber": "10863D",
  },
  {
    "divisionId": 1,
    "rank": 28,
    "teamNumber": "20230B",
  },
  {
    "divisionId": 1,
    "rank": 29,
    "teamNumber": "70909C",
  },
  {
    "divisionId": 1,
    "rank": 30,
    "teamNumber": "13520A",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division 3`] = `
[
  {
    "driverScore": 100,
    "overallScore": 200,
    "programmingScore": 100,
    "rank": 1,
    "teamId": 105118,
    "teamNumber": "4815B",
  },
  {
    "driverScore": 100,
    "overallScore": 113,
    "programmingScore": 13,
    "rank": 2,
    "teamId": 160887,
    "teamNumber": "6626A",
  },
  {
    "driverScore": 100,
    "overallScore": 105,
    "programmingScore": 5,
    "rank": 3,
    "teamId": 175243,
    "teamNumber": "2706E",
  },
  {
    "driverScore": 64,
    "overallScore": 104,
    "programmingScore": 40,
    "rank": 4,
    "teamId": 163901,
    "teamNumber": "70909S",
  },
  {
    "driverScore": 100,
    "overallScore": 100,
    "programmingScore": 0,
    "rank": 5,
    "teamId": 103059,
    "teamNumber": "4815A",
  },
  {
    "driverScore": 88,
    "overallScore": 89,
    "programmingScore": 1,
    "rank": 6,
    "teamId": 126532,
    "teamNumber": "13205B",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 7,
    "teamId": 126531,
    "teamNumber": "13205A",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 8,
    "teamId": 62270,
    "teamNumber": "10863A",
  },
  {
    "driverScore": 76,
    "overallScore": 76,
    "programmingScore": 0,
    "rank": 9,
    "teamId": 175244,
    "teamNumber": "2706F",
  },
  {
    "driverScore": 64,
    "overallScore": 64,
    "programmingScore": 0,
    "rank": 10,
    "teamId": 129461,
    "teamNumber": "3415A",
  },
  {
    "driverScore": 64,
    "overallScore": 64,
    "programmingScore": 0,
    "rank": 11,
    "teamId": 175105,
    "teamNumber": "13520B",
  },
  {
    "driverScore": 52,
    "overallScore": 52,
    "programmingScore": 0,
    "rank": 12,
    "teamId": 79721,
    "teamNumber": "10863B",
  },
  {
    "driverScore": 43,
    "overallScore": 43,
    "programmingScore": 0,
    "rank": 13,
    "teamId": 104028,
    "teamNumber": "2706C",
  },
  {
    "driverScore": 33,
    "overallScore": 33,
    "programmingScore": 0,
    "rank": 14,
    "teamId": 181592,
    "teamNumber": "26054B",
  },
  {
    "driverScore": 26,
    "overallScore": 31,
    "programmingScore": 5,
    "rank": 15,
    "teamId": 181990,
    "teamNumber": "10863D",
  },
  {
    "driverScore": 26,
    "overallScore": 26,
    "programmingScore": 0,
    "rank": 16,
    "teamId": 129462,
    "teamNumber": "3415B",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 17,
    "teamId": 167515,
    "teamNumber": "20230A",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 18,
    "teamId": 102496,
    "teamNumber": "2706A",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 19,
    "teamId": 163783,
    "teamNumber": "70909C",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 20,
    "teamId": 182306,
    "teamNumber": "4206A",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 21,
    "teamId": 178754,
    "teamNumber": "20230D",
  },
  {
    "driverScore": 1,
    "overallScore": 1,
    "programmingScore": 0,
    "rank": 22,
    "teamId": 136716,
    "teamNumber": "5354B",
  },
  {
    "driverScore": 0,
    "overallScore": 0,
    "programmingScore": 0,
    "rank": 23,
    "teamId": 167516,
    "teamNumber": "20230B",
  },
  {
    "driverScore": 0,
    "overallScore": 0,
    "programmingScore": 0,
    "rank": 24,
    "teamId": 136715,
    "teamNumber": "5354A",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division 4`] = `
[
  {
    "divisionId": 1,
    "rank": 1,
    "teamNumber": "6626A",
  },
  {
    "divisionId": 1,
    "rank": 2,
    "teamNumber": "4815A",
  },
  {
    "divisionId": 1,
    "rank": 3,
    "teamNumber": "4815B",
  },
  {
    "divisionId": 1,
    "rank": 4,
    "teamNumber": "10863A",
  },
  {
    "divisionId": 1,
    "rank": 5,
    "teamNumber": "2706E",
  },
  {
    "divisionId": 1,
    "rank": 6,
    "teamNumber": "21119B",
  },
  {
    "divisionId": 1,
    "rank": 7,
    "teamNumber": "3415A",
  },
  {
    "divisionId": 1,
    "rank": 8,
    "teamNumber": "2706C",
  },
  {
    "divisionId": 1,
    "rank": 9,
    "teamNumber": "13205A",
  },
  {
    "divisionId": 1,
    "rank": 10,
    "teamNumber": "3415B",
  },
  {
    "divisionId": 1,
    "rank": 11,
    "teamNumber": "13205B",
  },
  {
    "divisionId": 1,
    "rank": 12,
    "teamNumber": "21169E",
  },
  {
    "divisionId": 1,
    "rank": 13,
    "teamNumber": "26054B",
  },
  {
    "divisionId": 1,
    "rank": 14,
    "teamNumber": "10863B",
  },
  {
    "divisionId": 1,
    "rank": 15,
    "teamNumber": "5354A",
  },
  {
    "divisionId": 1,
    "rank": 16,
    "teamNumber": "20230D",
  },
  {
    "divisionId": 1,
    "rank": 17,
    "teamNumber": "5354B",
  },
  {
    "divisionId": 1,
    "rank": 18,
    "teamNumber": "2706A",
  },
  {
    "divisionId": 1,
    "rank": 19,
    "teamNumber": "26054A",
  },
  {
    "divisionId": 1,
    "rank": 20,
    "teamNumber": "21119A",
  },
  {
    "divisionId": 1,
    "rank": 21,
    "teamNumber": "2706F",
  },
  {
    "divisionId": 1,
    "rank": 22,
    "teamNumber": "4206A",
  },
  {
    "divisionId": 1,
    "rank": 23,
    "teamNumber": "20230A",
  },
  {
    "divisionId": 1,
    "rank": 24,
    "teamNumber": "70909S",
  },
  {
    "divisionId": 1,
    "rank": 25,
    "teamNumber": "13520B",
  },
  {
    "divisionId": 1,
    "rank": 26,
    "teamNumber": "20230C",
  },
  {
    "divisionId": 1,
    "rank": 27,
    "teamNumber": "10863D",
  },
  {
    "divisionId": 1,
    "rank": 28,
    "teamNumber": "20230B",
  },
  {
    "divisionId": 1,
    "rank": 29,
    "teamNumber": "70909C",
  },
  {
    "divisionId": 1,
    "rank": 30,
    "teamNumber": "13520A",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division 5`] = `20`;

exports[`RobotEventsSource > should get the correct event data with 1 division 6`] = `
[
  {
    "divisionId": 1,
    "rank": 1,
    "teamNumber": "6626A",
  },
  {
    "divisionId": 1,
    "rank": 2,
    "teamNumber": "4815A",
  },
  {
    "divisionId": 1,
    "rank": 3,
    "teamNumber": "4815B",
  },
  {
    "divisionId": 1,
    "rank": 4,
    "teamNumber": "10863A",
  },
  {
    "divisionId": 1,
    "rank": 5,
    "teamNumber": "2706E",
  },
  {
    "divisionId": 1,
    "rank": 9,
    "teamNumber": "13205A",
  },
  {
    "divisionId": 1,
    "rank": 11,
    "teamNumber": "13205B",
  },
  {
    "divisionId": 1,
    "rank": 14,
    "teamNumber": "10863B",
  },
  {
    "divisionId": 1,
    "rank": 16,
    "teamNumber": "20230D",
  },
  {
    "divisionId": 1,
    "rank": 21,
    "teamNumber": "2706F",
  },
  {
    "divisionId": 1,
    "rank": 22,
    "teamNumber": "4206A",
  },
  {
    "divisionId": 1,
    "rank": 23,
    "teamNumber": "20230A",
  },
  {
    "divisionId": 1,
    "rank": 24,
    "teamNumber": "70909S",
  },
  {
    "divisionId": 1,
    "rank": 25,
    "teamNumber": "13520B",
  },
  {
    "divisionId": 1,
    "rank": 26,
    "teamNumber": "20230C",
  },
  {
    "divisionId": 1,
    "rank": 28,
    "teamNumber": "20230B",
  },
  {
    "divisionId": 1,
    "rank": 29,
    "teamNumber": "70909C",
  },
  {
    "divisionId": 1,
    "rank": 30,
    "teamNumber": "13520A",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division 7`] = `
[
  {
    "driverScore": 100,
    "overallScore": 200,
    "programmingScore": 100,
    "rank": 1,
    "teamId": 105118,
    "teamNumber": "4815B",
  },
  {
    "driverScore": 100,
    "overallScore": 113,
    "programmingScore": 13,
    "rank": 2,
    "teamId": 160887,
    "teamNumber": "6626A",
  },
  {
    "driverScore": 100,
    "overallScore": 105,
    "programmingScore": 5,
    "rank": 3,
    "teamId": 175243,
    "teamNumber": "2706E",
  },
  {
    "driverScore": 64,
    "overallScore": 104,
    "programmingScore": 40,
    "rank": 4,
    "teamId": 163901,
    "teamNumber": "70909S",
  },
  {
    "driverScore": 100,
    "overallScore": 100,
    "programmingScore": 0,
    "rank": 5,
    "teamId": 103059,
    "teamNumber": "4815A",
  },
  {
    "driverScore": 88,
    "overallScore": 89,
    "programmingScore": 1,
    "rank": 6,
    "teamId": 126532,
    "teamNumber": "13205B",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 7,
    "teamId": 126531,
    "teamNumber": "13205A",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 8,
    "teamId": 62270,
    "teamNumber": "10863A",
  },
  {
    "driverScore": 76,
    "overallScore": 76,
    "programmingScore": 0,
    "rank": 9,
    "teamId": 175244,
    "teamNumber": "2706F",
  },
  {
    "driverScore": 64,
    "overallScore": 64,
    "programmingScore": 0,
    "rank": 11,
    "teamId": 175105,
    "teamNumber": "13520B",
  },
  {
    "driverScore": 52,
    "overallScore": 52,
    "programmingScore": 0,
    "rank": 12,
    "teamId": 79721,
    "teamNumber": "10863B",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 17,
    "teamId": 167515,
    "teamNumber": "20230A",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 19,
    "teamId": 163783,
    "teamNumber": "70909C",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 20,
    "teamId": 182306,
    "teamNumber": "4206A",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 21,
    "teamId": 178754,
    "teamNumber": "20230D",
  },
  {
    "driverScore": 0,
    "overallScore": 0,
    "programmingScore": 0,
    "rank": 23,
    "teamId": 167516,
    "teamNumber": "20230B",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division 8`] = `
{
  "joinedTeamsInEventCount": 20,
  "rankingEligibilityThreshold": 7,
  "skillsEligibilityThreshold": 8,
  "teamsInGroup": [
    {
      "autoSkills": {
        "no": 3,
        "result": "eligible",
        "score": 13,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 2,
        "result": "eligible",
        "score": 113,
      },
      "qualRanking": {
        "no": 1,
        "result": "eligible",
        "score": 1,
      },
      "teamNumber": "6626A",
    },
    {
      "autoSkills": {
        "no": 6,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 5,
        "result": "eligible",
        "score": 100,
      },
      "qualRanking": {
        "no": 2,
        "result": "eligible",
        "score": 2,
      },
      "teamNumber": "4815A",
    },
    {
      "autoSkills": {
        "no": 1,
        "result": "eligible",
        "score": 100,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 1,
        "result": "eligible",
        "score": 200,
      },
      "qualRanking": {
        "no": 3,
        "result": "eligible",
        "score": 3,
      },
      "teamNumber": "4815B",
    },
    {
      "autoSkills": {
        "no": 8,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 8,
        "result": "eligible",
        "score": 88,
      },
      "qualRanking": {
        "no": 4,
        "result": "eligible",
        "score": 4,
      },
      "teamNumber": "10863A",
    },
    {
      "autoSkills": {
        "no": 4,
        "result": "eligible",
        "score": 5,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 3,
        "result": "eligible",
        "score": 105,
      },
      "qualRanking": {
        "no": 5,
        "result": "eligible",
        "score": 5,
      },
      "teamNumber": "2706E",
    },
    {
      "autoSkills": {
        "no": 7,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 7,
        "result": "eligible",
        "score": 88,
      },
      "qualRanking": {
        "no": 6,
        "result": "eligible",
        "score": 6,
      },
      "teamNumber": "13205A",
    },
    {
      "autoSkills": {
        "no": 5,
        "result": "eligible",
        "score": 1,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 6,
        "result": "eligible",
        "score": 89,
      },
      "qualRanking": {
        "no": 7,
        "result": "eligible",
        "score": 7,
      },
      "teamNumber": "13205B",
    },
    {
      "autoSkills": {
        "no": 11,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 11,
        "result": "ineligible",
        "score": 52,
      },
      "qualRanking": {
        "no": 8,
        "result": "ineligible",
        "score": 8,
      },
      "teamNumber": "10863B",
    },
    {
      "autoSkills": {
        "no": 15,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 15,
        "result": "ineligible",
        "score": 5,
      },
      "qualRanking": {
        "no": 9,
        "result": "ineligible",
        "score": 9,
      },
      "teamNumber": "20230D",
    },
    {
      "autoSkills": {
        "no": 9,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 9,
        "result": "ineligible",
        "score": 76,
      },
      "qualRanking": {
        "no": 10,
        "result": "ineligible",
        "score": 10,
      },
      "teamNumber": "2706F",
    },
    {
      "autoSkills": {
        "no": 14,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 14,
        "result": "ineligible",
        "score": 5,
      },
      "qualRanking": {
        "no": 11,
        "result": "ineligible",
        "score": 11,
      },
      "teamNumber": "4206A",
    },
    {
      "autoSkills": {
        "no": 12,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 12,
        "result": "ineligible",
        "score": 18,
      },
      "qualRanking": {
        "no": 12,
        "result": "ineligible",
        "score": 12,
      },
      "teamNumber": "20230A",
    },
    {
      "autoSkills": {
        "no": 2,
        "result": "eligible",
        "score": 40,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 4,
        "result": "eligible",
        "score": 104,
      },
      "qualRanking": {
        "no": 13,
        "result": "ineligible",
        "score": 13,
      },
      "teamNumber": "70909S",
    },
    {
      "autoSkills": {
        "no": 10,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 10,
        "result": "ineligible",
        "score": 64,
      },
      "qualRanking": {
        "no": 14,
        "result": "ineligible",
        "score": 14,
      },
      "teamNumber": "13520B",
    },
    {
      "autoSkills": {
        "no": 0,
        "result": "no data",
        "score": -1,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 0,
        "result": "no data",
        "score": 0,
      },
      "qualRanking": {
        "no": 15,
        "result": "ineligible",
        "score": 15,
      },
      "teamNumber": "20230C",
    },
    {
      "autoSkills": {
        "no": 16,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 16,
        "result": "ineligible",
        "score": 0,
      },
      "qualRanking": {
        "no": 16,
        "result": "ineligible",
        "score": 16,
      },
      "teamNumber": "20230B",
    },
    {
      "autoSkills": {
        "no": 13,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 13,
        "result": "ineligible",
        "score": 18,
      },
      "qualRanking": {
        "no": 17,
        "result": "ineligible",
        "score": 17,
      },
      "teamNumber": "70909C",
    },
    {
      "autoSkills": {
        "no": 0,
        "result": "no data",
        "score": -1,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 0,
        "result": "no data",
        "score": 0,
      },
      "qualRanking": {
        "no": 18,
        "result": "ineligible",
        "score": 18,
      },
      "teamNumber": "13520A",
    },
  ],
}
`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionExcellenceAwardTeamEligibility 1`] = `
{
  "Excellence Award - Middle School": {
    "joinedTeamsInEventCount": 18,
    "rankingEligibilityThreshold": 7,
    "skillsEligibilityThreshold": 7,
    "teamsInGroup": [
      {
        "autoSkills": {
          "no": 3,
          "result": "eligible",
          "score": 13,
        },
        "isEligible": true,
        "overallSkills": {
          "no": 2,
          "result": "eligible",
          "score": 113,
        },
        "qualRanking": {
          "no": 1,
          "result": "eligible",
          "score": 1,
        },
        "teamNumber": "6626A",
      },
      {
        "autoSkills": {
          "no": 6,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 5,
          "result": "eligible",
          "score": 100,
        },
        "qualRanking": {
          "no": 2,
          "result": "eligible",
          "score": 2,
        },
        "teamNumber": "4815A",
      },
      {
        "autoSkills": {
          "no": 1,
          "result": "eligible",
          "score": 100,
        },
        "isEligible": true,
        "overallSkills": {
          "no": 1,
          "result": "eligible",
          "score": 200,
        },
        "qualRanking": {
          "no": 3,
          "result": "eligible",
          "score": 3,
        },
        "teamNumber": "4815B",
      },
      {
        "autoSkills": {
          "no": 8,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 8,
          "result": "ineligible",
          "score": 88,
        },
        "qualRanking": {
          "no": 4,
          "result": "eligible",
          "score": 4,
        },
        "teamNumber": "10863A",
      },
      {
        "autoSkills": {
          "no": 4,
          "result": "eligible",
          "score": 5,
        },
        "isEligible": true,
        "overallSkills": {
          "no": 3,
          "result": "eligible",
          "score": 105,
        },
        "qualRanking": {
          "no": 5,
          "result": "eligible",
          "score": 5,
        },
        "teamNumber": "2706E",
      },
      {
        "autoSkills": {
          "no": 7,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 7,
          "result": "eligible",
          "score": 88,
        },
        "qualRanking": {
          "no": 6,
          "result": "eligible",
          "score": 6,
        },
        "teamNumber": "13205A",
      },
      {
        "autoSkills": {
          "no": 5,
          "result": "eligible",
          "score": 1,
        },
        "isEligible": true,
        "overallSkills": {
          "no": 6,
          "result": "eligible",
          "score": 89,
        },
        "qualRanking": {
          "no": 7,
          "result": "eligible",
          "score": 7,
        },
        "teamNumber": "13205B",
      },
      {
        "autoSkills": {
          "no": 11,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 11,
          "result": "ineligible",
          "score": 52,
        },
        "qualRanking": {
          "no": 8,
          "result": "ineligible",
          "score": 8,
        },
        "teamNumber": "10863B",
      },
      {
        "autoSkills": {
          "no": 15,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 15,
          "result": "ineligible",
          "score": 5,
        },
        "qualRanking": {
          "no": 9,
          "result": "ineligible",
          "score": 9,
        },
        "teamNumber": "20230D",
      },
      {
        "autoSkills": {
          "no": 9,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 9,
          "result": "ineligible",
          "score": 76,
        },
        "qualRanking": {
          "no": 10,
          "result": "ineligible",
          "score": 10,
        },
        "teamNumber": "2706F",
      },
      {
        "autoSkills": {
          "no": 14,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 14,
          "result": "ineligible",
          "score": 5,
        },
        "qualRanking": {
          "no": 11,
          "result": "ineligible",
          "score": 11,
        },
        "teamNumber": "4206A",
      },
      {
        "autoSkills": {
          "no": 12,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 12,
          "result": "ineligible",
          "score": 18,
        },
        "qualRanking": {
          "no": 12,
          "result": "ineligible",
          "score": 12,
        },
        "teamNumber": "20230A",
      },
      {
        "autoSkills": {
          "no": 2,
          "result": "eligible",
          "score": 40,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 4,
          "result": "eligible",
          "score": 104,
        },
        "qualRanking": {
          "no": 13,
          "result": "ineligible",
          "score": 13,
        },
        "teamNumber": "70909S",
      },
      {
        "autoSkills": {
          "no": 10,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 10,
          "result": "ineligible",
          "score": 64,
        },
        "qualRanking": {
          "no": 14,
          "result": "ineligible",
          "score": 14,
        },
        "teamNumber": "13520B",
      },
      {
        "autoSkills": {
          "no": 0,
          "result": "no data",
          "score": -1,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 0,
          "result": "no data",
          "score": 0,
        },
        "qualRanking": {
          "no": 15,
          "result": "ineligible",
          "score": 15,
        },
        "teamNumber": "20230C",
      },
      {
        "autoSkills": {
          "no": 16,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 16,
          "result": "ineligible",
          "score": 0,
        },
        "qualRanking": {
          "no": 16,
          "result": "ineligible",
          "score": 16,
        },
        "teamNumber": "20230B",
      },
      {
        "autoSkills": {
          "no": 13,
          "result": "ineligible",
          "score": 0,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 13,
          "result": "ineligible",
          "score": 18,
        },
        "qualRanking": {
          "no": 17,
          "result": "ineligible",
          "score": 17,
        },
        "teamNumber": "70909C",
      },
      {
        "autoSkills": {
          "no": 0,
          "result": "no data",
          "score": -1,
        },
        "isEligible": false,
        "overallSkills": {
          "no": 0,
          "result": "no data",
          "score": 0,
        },
        "qualRanking": {
          "no": 18,
          "result": "ineligible",
          "score": 18,
        },
        "teamNumber": "13520A",
      },
    ],
  },
}
`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionRankings 1`] = `
[
  102496,
  104028,
  175243,
  175244,
  129461,
  129462,
  144269,
  144279,
  151768,
  154595,
  162534,
  182306,
  103059,
  105118,
  136715,
  136716,
  160887,
  62270,
  79721,
  181990,
  126531,
  126532,
  175104,
  175105,
  154977,
  162994,
  167515,
  167516,
  178753,
  178754,
  172145,
  172146,
  180856,
  181591,
  181592,
  163783,
  163901,
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionRankings 2`] = `
[
  {
    "divisionId": 1,
    "rank": 1,
    "teamNumber": "6626A",
  },
  {
    "divisionId": 1,
    "rank": 2,
    "teamNumber": "4815A",
  },
  {
    "divisionId": 1,
    "rank": 3,
    "teamNumber": "4815B",
  },
  {
    "divisionId": 1,
    "rank": 4,
    "teamNumber": "10863A",
  },
  {
    "divisionId": 1,
    "rank": 5,
    "teamNumber": "2706E",
  },
  {
    "divisionId": 1,
    "rank": 6,
    "teamNumber": "21119B",
  },
  {
    "divisionId": 1,
    "rank": 7,
    "teamNumber": "3415A",
  },
  {
    "divisionId": 1,
    "rank": 8,
    "teamNumber": "2706C",
  },
  {
    "divisionId": 1,
    "rank": 9,
    "teamNumber": "13205A",
  },
  {
    "divisionId": 1,
    "rank": 10,
    "teamNumber": "3415B",
  },
  {
    "divisionId": 1,
    "rank": 11,
    "teamNumber": "13205B",
  },
  {
    "divisionId": 1,
    "rank": 12,
    "teamNumber": "21169E",
  },
  {
    "divisionId": 1,
    "rank": 13,
    "teamNumber": "26054B",
  },
  {
    "divisionId": 1,
    "rank": 14,
    "teamNumber": "10863B",
  },
  {
    "divisionId": 1,
    "rank": 15,
    "teamNumber": "5354A",
  },
  {
    "divisionId": 1,
    "rank": 16,
    "teamNumber": "20230D",
  },
  {
    "divisionId": 1,
    "rank": 17,
    "teamNumber": "5354B",
  },
  {
    "divisionId": 1,
    "rank": 18,
    "teamNumber": "2706A",
  },
  {
    "divisionId": 1,
    "rank": 19,
    "teamNumber": "26054A",
  },
  {
    "divisionId": 1,
    "rank": 20,
    "teamNumber": "21119A",
  },
  {
    "divisionId": 1,
    "rank": 21,
    "teamNumber": "2706F",
  },
  {
    "divisionId": 1,
    "rank": 22,
    "teamNumber": "4206A",
  },
  {
    "divisionId": 1,
    "rank": 23,
    "teamNumber": "20230A",
  },
  {
    "divisionId": 1,
    "rank": 24,
    "teamNumber": "70909S",
  },
  {
    "divisionId": 1,
    "rank": 25,
    "teamNumber": "13520B",
  },
  {
    "divisionId": 1,
    "rank": 26,
    "teamNumber": "20230C",
  },
  {
    "divisionId": 1,
    "rank": 27,
    "teamNumber": "10863D",
  },
  {
    "divisionId": 1,
    "rank": 28,
    "teamNumber": "20230B",
  },
  {
    "divisionId": 1,
    "rank": 29,
    "teamNumber": "70909C",
  },
  {
    "divisionId": 1,
    "rank": 30,
    "teamNumber": "13520A",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionRankings 3`] = `
[
  {
    "driverScore": 100,
    "overallScore": 200,
    "programmingScore": 100,
    "rank": 1,
    "teamId": 105118,
    "teamNumber": "4815B",
  },
  {
    "driverScore": 100,
    "overallScore": 113,
    "programmingScore": 13,
    "rank": 2,
    "teamId": 160887,
    "teamNumber": "6626A",
  },
  {
    "driverScore": 100,
    "overallScore": 105,
    "programmingScore": 5,
    "rank": 3,
    "teamId": 175243,
    "teamNumber": "2706E",
  },
  {
    "driverScore": 64,
    "overallScore": 104,
    "programmingScore": 40,
    "rank": 4,
    "teamId": 163901,
    "teamNumber": "70909S",
  },
  {
    "driverScore": 100,
    "overallScore": 100,
    "programmingScore": 0,
    "rank": 5,
    "teamId": 103059,
    "teamNumber": "4815A",
  },
  {
    "driverScore": 88,
    "overallScore": 89,
    "programmingScore": 1,
    "rank": 6,
    "teamId": 126532,
    "teamNumber": "13205B",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 7,
    "teamId": 126531,
    "teamNumber": "13205A",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 8,
    "teamId": 62270,
    "teamNumber": "10863A",
  },
  {
    "driverScore": 76,
    "overallScore": 76,
    "programmingScore": 0,
    "rank": 9,
    "teamId": 175244,
    "teamNumber": "2706F",
  },
  {
    "driverScore": 64,
    "overallScore": 64,
    "programmingScore": 0,
    "rank": 10,
    "teamId": 129461,
    "teamNumber": "3415A",
  },
  {
    "driverScore": 64,
    "overallScore": 64,
    "programmingScore": 0,
    "rank": 11,
    "teamId": 175105,
    "teamNumber": "13520B",
  },
  {
    "driverScore": 52,
    "overallScore": 52,
    "programmingScore": 0,
    "rank": 12,
    "teamId": 79721,
    "teamNumber": "10863B",
  },
  {
    "driverScore": 43,
    "overallScore": 43,
    "programmingScore": 0,
    "rank": 13,
    "teamId": 104028,
    "teamNumber": "2706C",
  },
  {
    "driverScore": 33,
    "overallScore": 33,
    "programmingScore": 0,
    "rank": 14,
    "teamId": 181592,
    "teamNumber": "26054B",
  },
  {
    "driverScore": 26,
    "overallScore": 31,
    "programmingScore": 5,
    "rank": 15,
    "teamId": 181990,
    "teamNumber": "10863D",
  },
  {
    "driverScore": 26,
    "overallScore": 26,
    "programmingScore": 0,
    "rank": 16,
    "teamId": 129462,
    "teamNumber": "3415B",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 17,
    "teamId": 167515,
    "teamNumber": "20230A",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 18,
    "teamId": 102496,
    "teamNumber": "2706A",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 19,
    "teamId": 163783,
    "teamNumber": "70909C",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 20,
    "teamId": 182306,
    "teamNumber": "4206A",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 21,
    "teamId": 178754,
    "teamNumber": "20230D",
  },
  {
    "driverScore": 1,
    "overallScore": 1,
    "programmingScore": 0,
    "rank": 22,
    "teamId": 136716,
    "teamNumber": "5354B",
  },
  {
    "driverScore": 0,
    "overallScore": 0,
    "programmingScore": 0,
    "rank": 23,
    "teamId": 167516,
    "teamNumber": "20230B",
  },
  {
    "driverScore": 0,
    "overallScore": 0,
    "programmingScore": 0,
    "rank": 24,
    "teamId": 136715,
    "teamNumber": "5354A",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionRankings 4`] = `20`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionRankings 5`] = `
[
  {
    "divisionId": 1,
    "rank": 1,
    "teamNumber": "6626A",
  },
  {
    "divisionId": 1,
    "rank": 2,
    "teamNumber": "4815A",
  },
  {
    "divisionId": 1,
    "rank": 3,
    "teamNumber": "4815B",
  },
  {
    "divisionId": 1,
    "rank": 4,
    "teamNumber": "10863A",
  },
  {
    "divisionId": 1,
    "rank": 5,
    "teamNumber": "2706E",
  },
  {
    "divisionId": 1,
    "rank": 9,
    "teamNumber": "13205A",
  },
  {
    "divisionId": 1,
    "rank": 11,
    "teamNumber": "13205B",
  },
  {
    "divisionId": 1,
    "rank": 14,
    "teamNumber": "10863B",
  },
  {
    "divisionId": 1,
    "rank": 16,
    "teamNumber": "20230D",
  },
  {
    "divisionId": 1,
    "rank": 21,
    "teamNumber": "2706F",
  },
  {
    "divisionId": 1,
    "rank": 22,
    "teamNumber": "4206A",
  },
  {
    "divisionId": 1,
    "rank": 23,
    "teamNumber": "20230A",
  },
  {
    "divisionId": 1,
    "rank": 24,
    "teamNumber": "70909S",
  },
  {
    "divisionId": 1,
    "rank": 25,
    "teamNumber": "13520B",
  },
  {
    "divisionId": 1,
    "rank": 26,
    "teamNumber": "20230C",
  },
  {
    "divisionId": 1,
    "rank": 28,
    "teamNumber": "20230B",
  },
  {
    "divisionId": 1,
    "rank": 29,
    "teamNumber": "70909C",
  },
  {
    "divisionId": 1,
    "rank": 30,
    "teamNumber": "13520A",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionRankings 6`] = `
[
  {
    "driverScore": 100,
    "overallScore": 200,
    "programmingScore": 100,
    "rank": 1,
    "teamId": 105118,
    "teamNumber": "4815B",
  },
  {
    "driverScore": 100,
    "overallScore": 113,
    "programmingScore": 13,
    "rank": 2,
    "teamId": 160887,
    "teamNumber": "6626A",
  },
  {
    "driverScore": 100,
    "overallScore": 105,
    "programmingScore": 5,
    "rank": 3,
    "teamId": 175243,
    "teamNumber": "2706E",
  },
  {
    "driverScore": 64,
    "overallScore": 104,
    "programmingScore": 40,
    "rank": 4,
    "teamId": 163901,
    "teamNumber": "70909S",
  },
  {
    "driverScore": 100,
    "overallScore": 100,
    "programmingScore": 0,
    "rank": 5,
    "teamId": 103059,
    "teamNumber": "4815A",
  },
  {
    "driverScore": 88,
    "overallScore": 89,
    "programmingScore": 1,
    "rank": 6,
    "teamId": 126532,
    "teamNumber": "13205B",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 7,
    "teamId": 126531,
    "teamNumber": "13205A",
  },
  {
    "driverScore": 88,
    "overallScore": 88,
    "programmingScore": 0,
    "rank": 8,
    "teamId": 62270,
    "teamNumber": "10863A",
  },
  {
    "driverScore": 76,
    "overallScore": 76,
    "programmingScore": 0,
    "rank": 9,
    "teamId": 175244,
    "teamNumber": "2706F",
  },
  {
    "driverScore": 64,
    "overallScore": 64,
    "programmingScore": 0,
    "rank": 11,
    "teamId": 175105,
    "teamNumber": "13520B",
  },
  {
    "driverScore": 52,
    "overallScore": 52,
    "programmingScore": 0,
    "rank": 12,
    "teamId": 79721,
    "teamNumber": "10863B",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 17,
    "teamId": 167515,
    "teamNumber": "20230A",
  },
  {
    "driverScore": 18,
    "overallScore": 18,
    "programmingScore": 0,
    "rank": 19,
    "teamId": 163783,
    "teamNumber": "70909C",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 20,
    "teamId": 182306,
    "teamNumber": "4206A",
  },
  {
    "driverScore": 5,
    "overallScore": 5,
    "programmingScore": 0,
    "rank": 21,
    "teamId": 178754,
    "teamNumber": "20230D",
  },
  {
    "driverScore": 0,
    "overallScore": 0,
    "programmingScore": 0,
    "rank": 23,
    "teamId": 167516,
    "teamNumber": "20230B",
  },
]
`;

exports[`RobotEventsSource > should get the correct event data with 1 division using getEventDivisionRankings 7`] = `
{
  "joinedTeamsInEventCount": 20,
  "rankingEligibilityThreshold": 7,
  "skillsEligibilityThreshold": 8,
  "teamsInGroup": [
    {
      "autoSkills": {
        "no": 3,
        "result": "eligible",
        "score": 13,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 2,
        "result": "eligible",
        "score": 113,
      },
      "qualRanking": {
        "no": 1,
        "result": "eligible",
        "score": 1,
      },
      "teamNumber": "6626A",
    },
    {
      "autoSkills": {
        "no": 6,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 5,
        "result": "eligible",
        "score": 100,
      },
      "qualRanking": {
        "no": 2,
        "result": "eligible",
        "score": 2,
      },
      "teamNumber": "4815A",
    },
    {
      "autoSkills": {
        "no": 1,
        "result": "eligible",
        "score": 100,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 1,
        "result": "eligible",
        "score": 200,
      },
      "qualRanking": {
        "no": 3,
        "result": "eligible",
        "score": 3,
      },
      "teamNumber": "4815B",
    },
    {
      "autoSkills": {
        "no": 8,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 8,
        "result": "eligible",
        "score": 88,
      },
      "qualRanking": {
        "no": 4,
        "result": "eligible",
        "score": 4,
      },
      "teamNumber": "10863A",
    },
    {
      "autoSkills": {
        "no": 4,
        "result": "eligible",
        "score": 5,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 3,
        "result": "eligible",
        "score": 105,
      },
      "qualRanking": {
        "no": 5,
        "result": "eligible",
        "score": 5,
      },
      "teamNumber": "2706E",
    },
    {
      "autoSkills": {
        "no": 7,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 7,
        "result": "eligible",
        "score": 88,
      },
      "qualRanking": {
        "no": 6,
        "result": "eligible",
        "score": 6,
      },
      "teamNumber": "13205A",
    },
    {
      "autoSkills": {
        "no": 5,
        "result": "eligible",
        "score": 1,
      },
      "isEligible": true,
      "overallSkills": {
        "no": 6,
        "result": "eligible",
        "score": 89,
      },
      "qualRanking": {
        "no": 7,
        "result": "eligible",
        "score": 7,
      },
      "teamNumber": "13205B",
    },
    {
      "autoSkills": {
        "no": 11,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 11,
        "result": "ineligible",
        "score": 52,
      },
      "qualRanking": {
        "no": 8,
        "result": "ineligible",
        "score": 8,
      },
      "teamNumber": "10863B",
    },
    {
      "autoSkills": {
        "no": 15,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 15,
        "result": "ineligible",
        "score": 5,
      },
      "qualRanking": {
        "no": 9,
        "result": "ineligible",
        "score": 9,
      },
      "teamNumber": "20230D",
    },
    {
      "autoSkills": {
        "no": 9,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 9,
        "result": "ineligible",
        "score": 76,
      },
      "qualRanking": {
        "no": 10,
        "result": "ineligible",
        "score": 10,
      },
      "teamNumber": "2706F",
    },
    {
      "autoSkills": {
        "no": 14,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 14,
        "result": "ineligible",
        "score": 5,
      },
      "qualRanking": {
        "no": 11,
        "result": "ineligible",
        "score": 11,
      },
      "teamNumber": "4206A",
    },
    {
      "autoSkills": {
        "no": 12,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 12,
        "result": "ineligible",
        "score": 18,
      },
      "qualRanking": {
        "no": 12,
        "result": "ineligible",
        "score": 12,
      },
      "teamNumber": "20230A",
    },
    {
      "autoSkills": {
        "no": 2,
        "result": "eligible",
        "score": 40,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 4,
        "result": "eligible",
        "score": 104,
      },
      "qualRanking": {
        "no": 13,
        "result": "ineligible",
        "score": 13,
      },
      "teamNumber": "70909S",
    },
    {
      "autoSkills": {
        "no": 10,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 10,
        "result": "ineligible",
        "score": 64,
      },
      "qualRanking": {
        "no": 14,
        "result": "ineligible",
        "score": 14,
      },
      "teamNumber": "13520B",
    },
    {
      "autoSkills": {
        "no": 0,
        "result": "no data",
        "score": -1,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 0,
        "result": "no data",
        "score": 0,
      },
      "qualRanking": {
        "no": 15,
        "result": "ineligible",
        "score": 15,
      },
      "teamNumber": "20230C",
    },
    {
      "autoSkills": {
        "no": 16,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 16,
        "result": "ineligible",
        "score": 0,
      },
      "qualRanking": {
        "no": 16,
        "result": "ineligible",
        "score": 16,
      },
      "teamNumber": "20230B",
    },
    {
      "autoSkills": {
        "no": 13,
        "result": "ineligible",
        "score": 0,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 13,
        "result": "ineligible",
        "score": 18,
      },
      "qualRanking": {
        "no": 17,
        "result": "ineligible",
        "score": 17,
      },
      "teamNumber": "70909C",
    },
    {
      "autoSkills": {
        "no": 0,
        "result": "no data",
        "score": -1,
      },
      "isEligible": false,
      "overallSkills": {
        "no": 0,
        "result": "no data",
        "score": 0,
      },
      "qualRanking": {
        "no": 18,
        "result": "ineligible",
        "score": 18,
      },
      "teamNumber": "13520A",
    },
  ],
}
`;
